// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AreaChart > Snapshot Tests > matches snapshot with all props 1`] = `
<div>
  <div
    class="w-full h-full"
  >
    <h3
      class="text-lg font-semibold mb-2"
    >
      Complete Area Chart
    </h3>
    <div
      data-height="500"
      data-testid="recharts-responsive-container"
      data-width="100%"
    >
      <div
        data-props="{"margin":{"top":20,"right":30,"left":20,"bottom":5}}"
        data-testid="recharts-area-chart"
      >
        <defs>
          <lineargradient
            id="colorUv"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          >
            <stop
              offset="5%"
              stop-color="#8884d8"
              stop-opacity="0.8"
            />
            <stop
              offset="95%"
              stop-color="#8884d8"
              stop-opacity="0"
            />
          </lineargradient>
          <lineargradient
            id="colorPv"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          >
            <stop
              offset="5%"
              stop-color="#82ca9d"
              stop-opacity="0.8"
            />
            <stop
              offset="95%"
              stop-color="#82ca9d"
              stop-opacity="0"
            />
          </lineargradient>
        </defs>
        <div
          data-testid="recharts-cartesian-grid"
          stroke-dasharray="3 3"
        />
        <div
          data-datakey="name"
          data-testid="recharts-x-axis"
        />
        <div
          data-testid="recharts-y-axis"
        />
        <div
          data-testid="recharts-tooltip"
        />
        <div
          data-testid="recharts-legend"
        />
        <div
          data-datakey="uv"
          data-fill="url(#colorUv)"
          data-fillopacity="1"
          data-name="UV"
          data-stroke="#8884d8"
          data-testid="recharts-area"
          data-type="monotone"
        />
        <div
          data-datakey="pv"
          data-fill="url(#colorPv)"
          data-fillopacity="1"
          data-name="PV"
          data-stroke="#82ca9d"
          data-testid="recharts-area"
          data-type="monotone"
        />
        <div
          data-testid="chart-data"
        >
          [{"name":"1月","uv":8200,"pv":5400},{"name":"2月","uv":12100,"pv":7800},{"name":"3月","uv":15800,"pv":9600},{"name":"4月","uv":18200,"pv":11200}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AreaChart > Snapshot Tests > matches snapshot with custom data and title 1`] = `
<div>
  <div
    class="w-full h-full"
  >
    <h3
      class="text-lg font-semibold mb-2"
    >
      Custom Area Chart
    </h3>
    <div
      data-height="400"
      data-testid="recharts-responsive-container"
      data-width="100%"
    >
      <div
        data-props="{"margin":{"top":20,"right":30,"left":20,"bottom":5}}"
        data-testid="recharts-area-chart"
      >
        <defs>
          <lineargradient
            id="colorUv"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          >
            <stop
              offset="5%"
              stop-color="#8884d8"
              stop-opacity="0.8"
            />
            <stop
              offset="95%"
              stop-color="#8884d8"
              stop-opacity="0"
            />
          </lineargradient>
          <lineargradient
            id="colorPv"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          >
            <stop
              offset="5%"
              stop-color="#82ca9d"
              stop-opacity="0.8"
            />
            <stop
              offset="95%"
              stop-color="#82ca9d"
              stop-opacity="0"
            />
          </lineargradient>
        </defs>
        <div
          data-testid="recharts-cartesian-grid"
          stroke-dasharray="3 3"
        />
        <div
          data-datakey="name"
          data-testid="recharts-x-axis"
        />
        <div
          data-testid="recharts-y-axis"
        />
        <div
          data-testid="recharts-tooltip"
        />
        <div
          data-testid="recharts-legend"
        />
        <div
          data-datakey="uv"
          data-fill="url(#colorUv)"
          data-fillopacity="1"
          data-name="UV"
          data-stroke="#8884d8"
          data-testid="recharts-area"
          data-type="monotone"
        />
        <div
          data-datakey="pv"
          data-fill="url(#colorPv)"
          data-fillopacity="1"
          data-name="PV"
          data-stroke="#82ca9d"
          data-testid="recharts-area"
          data-type="monotone"
        />
        <div
          data-testid="chart-data"
        >
          [{"name":"1月","uv":8200,"pv":5400},{"name":"2月","uv":12100,"pv":7800},{"name":"3月","uv":15800,"pv":9600},{"name":"4月","uv":18200,"pv":11200}]
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AreaChart > Snapshot Tests > matches snapshot with default props 1`] = `
<div>
  <div
    class="w-full h-full"
  >
    <div
      data-height="300"
      data-testid="recharts-responsive-container"
      data-width="100%"
    >
      <div
        data-props="{"margin":{"top":20,"right":30,"left":20,"bottom":5}}"
        data-testid="recharts-area-chart"
      >
        <defs>
          <lineargradient
            id="colorUv"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          >
            <stop
              offset="5%"
              stop-color="#8884d8"
              stop-opacity="0.8"
            />
            <stop
              offset="95%"
              stop-color="#8884d8"
              stop-opacity="0"
            />
          </lineargradient>
          <lineargradient
            id="colorPv"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          >
            <stop
              offset="5%"
              stop-color="#82ca9d"
              stop-opacity="0.8"
            />
            <stop
              offset="95%"
              stop-color="#82ca9d"
              stop-opacity="0"
            />
          </lineargradient>
        </defs>
        <div
          data-testid="recharts-cartesian-grid"
          stroke-dasharray="3 3"
        />
        <div
          data-datakey="name"
          data-testid="recharts-x-axis"
        />
        <div
          data-testid="recharts-y-axis"
        />
        <div
          data-testid="recharts-tooltip"
        />
        <div
          data-testid="recharts-legend"
        />
        <div
          data-datakey="uv"
          data-fill="url(#colorUv)"
          data-fillopacity="1"
          data-name="UV"
          data-stroke="#8884d8"
          data-testid="recharts-area"
          data-type="monotone"
        />
        <div
          data-datakey="pv"
          data-fill="url(#colorPv)"
          data-fillopacity="1"
          data-name="PV"
          data-stroke="#82ca9d"
          data-testid="recharts-area"
          data-type="monotone"
        />
        <div
          data-testid="chart-data"
        >
          [{"name":"1月","uv":8200,"pv":5400},{"name":"2月","uv":12100,"pv":7800},{"name":"3月","uv":15800,"pv":9600},{"name":"4月","uv":18200,"pv":11200},{"name":"5月","uv":19500,"pv":12800},{"name":"6月","uv":17600,"pv":11900},{"name":"7月","uv":21000,"pv":14600}]
        </div>
      </div>
    </div>
  </div>
</div>
`;
